--- a/HOWTO:-Factory-reset-an-IKEA-bulb.asciidoc
+++ b/HOWTO:-Factory-reset-an-IKEA-bulb.asciidoc
@@ -1,3 +1,3 @@
 Toggle the power to bulb six times. The bulb should flash once after being turned on the sixth time. You can then press + in the gateway and you should see the bulb show up (it may take 10-15 seconds).
 
-Alternatively the method as described for the Philips Hue Bulbs, using the Philips Hue Dimmer Switch is confirmed to work for Ikea bulbs, too.
+Alternatively the method as described for the Philips Hue Bulbs, using the Philips Hue Dimmer Switch is confirmed to work for IKEA bulbs, too.
